--- a/media.css
+++ b/media.css
@@ -298,7 +298,7 @@
 
     .slider {
         width: 100%;
-        margin-top: 460px
+        margin-top: 200px
     }
 
     .notice-content {
@@ -439,5 +439,10 @@
 
         overflow: hidden;
         margin: auto;
+    }
+}
+@media only screen and (max-width: 300px){
+    .slider{
+        margin-top: 250px
     }
 }
